src/objects/Meeting_Products_MERC__c.object
<CustomObject>
    <description>Junction object to create many-to-many relationship between Meetings and Products. Created 10/4/2013 by KLorenti.</description>
    <fields>
        <fullName>Detail_Sequence_MERC__c</fullName>
        <description>Detail sequence for this particular product/indication combination.</description>
        <label>Detail Sequence</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Indication_Description_MERC__c</fullName>
        <formula>Indication_MERC__r.Indctn_Desc_GLBL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Indication Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Indication_MERC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Associated Meeting Product to Indication Information. Oliver Dunford 19th Dec 2013</description>
        <label>Indication</label>
        <referenceTo>Indication_GLBL__c</referenceTo>
        <relationshipLabel>Meeting Products</relationshipLabel>
        <relationshipName>Meeting_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Meeting_MERC__c</fullName>
        <description>Master Detail Relationship between Products and Meeting. Created 10/4/2013 by KLorenti.</description>
        <label>Meeting</label>
        <referenceTo>Meeting_MERC__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Meeting_Products</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Mercury_External_Id_MERC__c</fullName>
        <description>Generated by workflow, used for integration with external systems. OD 9th Dec</description>
        <externalId>true</externalId>
        <label>Mercury External Id</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Group_Id_MERC__c</fullName>
        <description>Unique identifier of product group as assigned by Lilly.
Created by John Adams on 12/9/2013</description>
        <formula>TEXT(Product_MERC__r.Product_Group_Id_GLBL__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Group Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_MERC__c</fullName>
        <description>Master-Detail from Meeting to Product. Created 10/4/2013 by KLorenti.</description>
        <label>Product</label>
        <referenceTo>Product_Group_GLBL__c</referenceTo>
        <relationshipLabel>Meetings</relationshipLabel>
        <relationshipName>Meeting_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>RTI_Transaction_ID_MERC__c</fullName>
        <label>RTI Transaction ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Meeting Product</label>
    <nameField>
        <displayFormat>P-{000000}</displayFormat>
        <label>Product/Topic  #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Meeting Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>